# agentX-agentbeats-invest

./: README.md  pyproject.toml  sample.env
scenarios/: __init__.py
scenarios/invest/: README.md  __init__.py  scenario.toml
scenarios/invest/agent/src/: agent.py  executor.py  server.py
scenarios/invest/evaluator/: Dockerfile
scenarios/invest/evaluator/src/: agent.py  executor.py  messenger.py  server.py
scenarios/invest/tests/: README.md  agent_output.json  test_agent.py  test_evaluator.py  test_search.py
scenarios/invest/utils/: __init__.py  search.py
